// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request Reducer Get content object 1`] = `
Object {
  "contentLibraries": Object {},
  "contentObjects": Object {
    "hq__QmWZ3FfjFio1TCuZjR5Qxpop6idvmzqW8LXJ1Ze2V648XS": ContentObject {
      "description": "test description",
      "hash": "hq__QmWZ3FfjFio1TCuZjR5Qxpop6idvmzqW8LXJ1Ze2V648XS",
      "latestVersion": Object {
        "hash": "hq__QmWZ3FfjFio1TCuZjR5Qxpop6idvmzqW8LXJ1Ze2V648XS",
        "id": "iq__S5Q8fUSmFbTyZ6D53HPCuR",
        "meta": Object {
          "description": "test description",
          "eluv.contract_address": "0xCe8f7fDc682C2b4Af0d412D5DAb046F820E25Ef9",
          "eluv.name": "TEST",
          "eluv.type": "library",
        },
        "type": "",
      },
      "libraryId": "ilibNLWSsptc11nHg6YNYhUair",
      "metadata": Object {
        "description": "test description",
        "eluv.contract_address": "0xCe8f7fDc682C2b4Af0d412D5DAb046F820E25Ef9",
        "eluv.name": "TEST",
        "eluv.type": "library",
      },
      "name": "TEST",
      "objectId": "iq__S5Q8fUSmFbTyZ6D53HPCuR",
      "type": "library",
      "versions": Array [
        undefined,
      ],
    },
  },
}
`;

exports[`Request Reducer Get library 1`] = `
Object {
  "contentLibraries": Object {
    "ilibNLWSsptc11nHg6YNYhUair": ContentLibrary {
      "contentObjects": Array [],
      "description": "test description",
      "libraryId": "ilibNLWSsptc11nHg6YNYhUair",
      "libraryMetadataObject": ContentObject {
        "description": "test description",
        "hash": "hq__QmWZ3FfjFio1TCuZjR5Qxpop6idvmzqW8LXJ1Ze2V648XS",
        "latestVersion": Object {
          "hash": "hq__QmWZ3FfjFio1TCuZjR5Qxpop6idvmzqW8LXJ1Ze2V648XS",
          "id": "iq__S5Q8fUSmFbTyZ6D53HPCuR",
          "meta": Object {
            "description": "test description",
            "eluv.contract_address": "0xCe8f7fDc682C2b4Af0d412D5DAb046F820E25Ef9",
            "eluv.name": "TEST",
            "eluv.type": "library",
          },
          "type": "",
        },
        "libraryId": "ilibNLWSsptc11nHg6YNYhUair",
        "metadata": Object {
          "description": "test description",
          "eluv.contract_address": "0xCe8f7fDc682C2b4Af0d412D5DAb046F820E25Ef9",
          "eluv.name": "TEST",
          "eluv.type": "library",
        },
        "name": "TEST",
        "objectId": "iq__S5Q8fUSmFbTyZ6D53HPCuR",
        "type": "library",
        "versions": Array [
          undefined,
        ],
      },
      "name": "TEST",
    },
  },
  "contentObjects": Object {},
}
`;

exports[`Request Reducer List all 1`] = `
Object {
  "contentLibraries": Object {
    "ilibNLWSsptc11nHg6YNYhUair": ContentLibrary {
      "contentObjects": Array [],
      "description": "test description",
      "libraryId": "ilibNLWSsptc11nHg6YNYhUair",
      "libraryMetadataObject": ContentObject {
        "description": "test description",
        "hash": "hq__QmWZ3FfjFio1TCuZjR5Qxpop6idvmzqW8LXJ1Ze2V648XS",
        "latestVersion": Object {
          "hash": "hq__QmWZ3FfjFio1TCuZjR5Qxpop6idvmzqW8LXJ1Ze2V648XS",
          "id": "iq__S5Q8fUSmFbTyZ6D53HPCuR",
          "meta": Object {
            "description": "test description",
            "eluv.contract_address": "0xCe8f7fDc682C2b4Af0d412D5DAb046F820E25Ef9",
            "eluv.name": "TEST",
            "eluv.type": "library",
          },
          "type": "",
        },
        "libraryId": "ilibNLWSsptc11nHg6YNYhUair",
        "metadata": Object {
          "description": "test description",
          "eluv.contract_address": "0xCe8f7fDc682C2b4Af0d412D5DAb046F820E25Ef9",
          "eluv.name": "TEST",
          "eluv.type": "library",
        },
        "name": "TEST",
        "objectId": "iq__S5Q8fUSmFbTyZ6D53HPCuR",
        "type": "library",
        "versions": Array [
          undefined,
        ],
      },
      "name": "TEST",
    },
  },
  "contentObjects": Object {},
}
`;
